feat: add very simple dashboard and fix swag
